@@ -43,6 +43,7 @@
     <spotbugs-maven-plugin.version>4.9.8.3</spotbugs-maven-plugin.version>
     <spotless.version>3.5.1</spotless.version>
     <surefire.version>3.5.6</surefire.version>
+    <test.jvm.instrumentation.args>-XX:+EnableDynamicAgentLoading --enable-native-access=ALL-UNNAMED</test.jvm.instrumentation.args>
   </properties>
 
   <dependencyManagement>
@@ -248,7 +249,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.version}</version>
         <configuration>
-          <argLine>@{argLine} -Xshare:off -javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <argLine>@{argLine} ${test.jvm.instrumentation.args} -Xshare:off -javaagent:${org.mockito:mockito-core:jar}</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <junit.jupiter.execution.parallel.config.fixed.parallelism>${junit.parallel.config.fixed.parallelism}</junit.jupiter.execution.parallel.config.fixed.parallelism>
@@ -264,7 +265,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>${maven-failsafe-plugin.version}</version>
         <configuration>
-          <argLine>@{argLine} -Xshare:off -javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <argLine>@{argLine} ${test.jvm.instrumentation.args} -Xshare:off -javaagent:${org.mockito:mockito-core:jar}</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <junit.jupiter.execution.parallel.config.fixed.parallelism>${junit.parallel.config.fixed.parallelism}</junit.jupiter.execution.parallel.config.fixed.parallelism>
